Refactoring shared classes for present
This change begins the refactoring of present code from D3D11on12 to the
shared D3D12TranslationLayer so that it can also be used with D3D9on12.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,8 @@ set(SRC
 	RootSignature.cpp
 	Shader.cpp
 	SubresourceHelpers.cpp
+	SwapChainHelper.cpp
+	SwapChainManager.cpp
 	Util.cpp
 	VideoDecode.cpp
 	VideoDecodeStatistics.cpp
@@ -62,6 +64,8 @@ set (INC
 	../include/segmented_stack.h
 	../include/Shader.hpp
 	../include/SubresourceHelpers.hpp
+	../include/SwapChainHelper.hpp
+	../include/SwapChainManager.hpp
 	../include/ThreadPool.hpp
 	../include/Util.hpp
 	../include/VideoDecode.hpp
