Factor out CDXBCParser into its own project
This allows us to use the DXBC parser both in the DXBC signer and in the
translation layer without haing a circular dependency or code
duplication.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,7 +41,6 @@ set (INC
 	../include/BatchedResource.hpp
 	../include/BlitHelper.hpp
 	../include/BlitHelperShaders.h
-	../include/BlobContainer.h
 	../include/BlockAllocators.h
 	../include/CommandListManager.hpp
 	../include/D3D12TranslationLayerDependencyIncludes.h
@@ -93,7 +92,7 @@ target_include_directories(d3d12translationlayer
 source_group(Inlines FILES ${INL})
 source_group("Header Files\\External" FILES ${EXTERNAL_INC})
 
-target_link_libraries(d3d12translationlayer d3d12 dxcore dxgi atls dxbcsigner)
+target_link_libraries(d3d12translationlayer d3d12 dxcore dxgi atls dxbcparser dxbcsigner)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../packages.config ${CMAKE_CURRENT_BINARY_DIR}/packages.config COPYONLY)
 add_library(WinPixEventRuntime INTERFACE IMPORTED GLOBAL)
@@ -126,15 +125,13 @@ if (HAS_WDK)
 	target_compile_definitions(d3d12translationlayer PUBLIC SUPPORTS_DXBC_PARSE)
 
 	add_library(d3d12translationlayer_wdk STATIC
-		DXBCUtils.cpp
 		ShaderBinary.cpp
-		BlobContainer.cpp
 		ShaderParser.cpp
         SharedResourceHelpers.cpp
-		../include/DXBCUtils.h
 		../include/ShaderBinary.h
         ../include/SharedResourceHelpers.hpp)
 	target_link_libraries(d3d12translationlayer_wdk d3d12translationlayer)
+
 else()
     message(WARNING "Only adding SDK-dependent projects.")
 endif()
