--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(USE_PIX "Enable the use of PIX markers" ON)
 
+add_subdirectory(DxbcParser)
 add_subdirectory(src)
