Remove DXBC Signer dependency from the translation layer
Signing can be done as a post process by the projects that need it. For
example, 9on12 will take a dependency on DXBC Signer and sign the blob
after calling CDXBCBuilder::GetFinalDXBC.

Laving the Dxbc Parser as a separate lib since it is cleaner to have the
signer depend only on that than the entire translation layer lib.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,7 +92,7 @@ target_include_directories(d3d12translationlayer
 source_group(Inlines FILES ${INL})
 source_group("Header Files\\External" FILES ${EXTERNAL_INC})
 
-target_link_libraries(d3d12translationlayer d3d12 dxcore dxgi atls dxbcparser dxbcsigner)
+target_link_libraries(d3d12translationlayer d3d12 dxcore dxgi atls dxbcparser)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../packages.config ${CMAKE_CURRENT_BINARY_DIR}/packages.config COPYONLY)
 add_library(WinPixEventRuntime INTERFACE IMPORTED GLOBAL)
