Rewrite residency library
Rather than bolting on the D3DX12 residency library, trim the fat
and integrate it a bit more into the translation layer. Notably,
we remove sync points and just use the existing 3-queue-fences,
which removes the need to store fences in private data, as well as
the need to signal a second fence on every submission. It also removes
a copy of the residency set on every submit (since this codebase only
submits on command list at a time anyway).

To resolve include order issues, the implementation of a few functions
is moved to a source file. Further changes will follow.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SRC
 	MaxFrameLatencyHelper.cpp
 	PipelineState.cpp
 	Query.cpp
+	Residency.cpp
 	Resource.cpp
 	ResourceBinding.cpp
 	ResourceCache.cpp
@@ -46,7 +47,6 @@ set (INC
 	../include/CommandListManager.hpp
 	../include/D3D12TranslationLayerDependencyIncludes.h
 	../include/D3D12TranslationLayerIncludes.h
-	../include/d3dx12residency.h
 	../include/DeviceChild.hpp
 	../include/DXGIColorSpaceHelper.h
 	../include/Fence.hpp
@@ -57,6 +57,7 @@ set (INC
 	../include/PipelineState.hpp
 	../include/PrecompiledShaders.h
 	../include/Query.hpp
+	../include/Residency.h
 	../include/Resource.hpp
 	../include/ResourceBinding.hpp
 	../include/ResourceCache.hpp
